# src/api/routes/BhagavadGitaRoutes.ts
@@ -7,11 +7,12 @@ const router = Router({
 	caseSensitive: true,
 })
 
-router.use(TokenMiddleware)
+// router.use(TokenMiddleware)
 
 router.get('/', BhagavadGitaController.chapters)
 router.get('/bab/:bab', BhagavadGitaController.chapter)
 router.get('/bab/:bab/slokas', BhagavadGitaController.slokas)
 router.get('/bab/:bab/sloka/:sloka', BhagavadGitaController.sloka)
+router.get('/bab/:bab/sloka/:sloka/makna', BhagavadGitaController.maknaSloka)
 
 export default router
