# src/api/routes/ChatRoutes.ts
@@ -1,0 +1,11 @@
+import { Router } from "express";
+import { ChatController } from '@controllers'
+
+const router = Router({
+	strict: true,
+	caseSensitive: true,
+})
+
+router.post('/', ChatController.chat)
+
+export default router
