# src/api/routes/index.ts
@@ -1,6 +1,7 @@
-import { Router, type NextFunction, type Handler } from "express";
+import { Router } from "express";
 import BhagavadGitaRoutes from "@routes/BhagavadGitaRoutes";
 import UserRoutes from "@routes/UserRoutes";
+import ChatRoutes from "@routes/ChatRoutes";
 import { ApiController } from "@controllers";
 
 const router = Router({
@@ -11,5 +12,6 @@ const router = Router({
 router.get('/', ApiController.index)
 router.use('/gita', BhagavadGitaRoutes)
 router.use('/user', UserRoutes)
+router.use('/chat', ChatRoutes)
 
 export default router
